gcc/testsuite/algol68/compile/error-contraction-2.a68
# { dg-options "-fstropping=upper" }  #

# Contracting mixed collateral variable and constant declarations is
  not allowed.  #
BEGIN PROC x = VOID: SKIP,
      y := VOID: SKIP; # { dg-error "mixed" } #
      x
END
